<resources>
    <string name="app_name">ReadMyBook</string>
    <string name="txtUserEmail">user@user.com</string>
    <string name="txtPassword">***********</string>
    <string name="btnLogin">Login</string>
    <string name="txtForgotPass">Forgot your password? Click Here</string>
    <string name="txtNoAcc">Do not have an account? Sign Up Here</string>
    <string name="txtEnterName">Enter Your Name</string>
    <string name="txtEmail">email@email.com</string>
    <string name="txtPasswordSign">Password</string>
    <string name="txtAddress">123, Main Street</string>
    <string name="txtAge">Age</string>
    <string name="txtAdmin">Admin</string>
    <string name="txtUser">User</string>
    <string name="txtBooksPreferences">Book Preferences</string>
    <string name="txtRegister">Register</string>
    <string name="txtFantasy">Fantasy</string>
    <string name="txtAdventure">Adventure</string>
    <string name="txtRomance">Romance</string>
    <string name="txtDystopian">Dystopian</string>
    <string name="txtMystery">Mystery</string>
    <string name="txtHorror">Horror</string>
    <string name="txtThriller">Thriller</string>
    <string name="txtParanormal">Paranormal</string>
    <string name="txtHistoricalFiction">Historical Fiction</string>
    <string name="txtScienceFiction">Sci-Fi</string>
    <string name="txtChildren">Children\'s</string>
    <string name="txtMemoir">Memoir</string>
    <string name="txtCooking">Cooking</string>
    <string name="txtArt">Art</string>
    <string name="txtSelfHelp">Self-Help</string>
    <string name="txtDevelopment">Development</string>
    <string name="txtHealth">Health</string>
    <string name="txtHistory">History</string>
    <string name="txtTravel">Travel</string>
    <string name="txtGuideHowto">Guide/How-to</string>
    <string name="txtFamilies">Families</string>
    <string name="txtHumor">Humor</string>
    <string name="txtEnterEmail">Enter your email</string>
    <string name="txtEnterNewPass">Enter your new password</string>
    <string name="txtReenterPass">Reenter New Password</string>
    <string name="txtConfirmPass">Confirm</string>
    <string name="txtAddBookTitle">Add a Book</string>
    <string name="hintBookTitle">Book Title</string>
    <string name="hintAuthor">Author</string>
    <string name="hintIsbn">13-Digit ISBN</string>
    <string name="hintPublisher">Publisher</string>
    <string name="hintPublicationYear">Publication Year</string>
    <string name="rdbGiveaway">Give Away</string>
    <string name="rdbRentOut">Rent out for:</string>
    <string name="btnAddBook">Add Book</string>
    <string name="txtadminremovebooktitle">Remove a book</string>
    <string name="txtenterbookremove">Enter The Book Name</string>
    <!--    <string name="removebookname">Enter The Book Name</string>-->
    <string name="enterbookname">Enter The Book Name</string>
    <string name="txtReason">Reason</string>
    <string name="removereason" />
    <string name="txtblockuser">Block A User</string>
    <string name="usernameblock">Enter The Username</string>
    <string name="txtReasonBlock">Reason</string>
    <string name="enternameblock" />
    <string name="blockoneday">Block for 1 day</string>
    <string name="blockthreedays">Block for 3 days</string>
    <string name="blocksevendays">Block for 7 days</string>
    <string name="confirmbtn">Confirm</string>
    <string name="removeuser">Remove A User</string>
    <!--    <string name="removename">Enter The Username</string>-->
    <string name="enterremovename">Enter The Username</string>
    <string name="reasonremoveuser">Reason:</string>
    <string name="enterreason" />
    <string name="btnconfirmremove">Confirm</string>
    <string name="txttrackabook">Track A Book</string>
    <string name="bookid">Enter The Book ID</string>
    <string name="btnconfirmtrack">TRACK</string>
    <string name="txtadmintools">Admin Tools</string>
    <string name="txtremoveabook">Remove a book</string>
    <string name="txtremoveauser">Remove a user</string>
    <string name="txtblockauser">Block a user</string>
    <string name="txttrack">Track a book</string>
    <string name="btnemail">Change your email</string>
    <string name="btnpassword">Change your password</string>
    <string name="btnadminaccess">Revoke Admin Access</string>
    <string name="btnadmin">Revoke Admin Access</string>
    <string name="btnconfirmm">Confirm</string>
    <string name="txtUserNameInfo">Hi Username goes here</string>
    <string name="txtBooksAvailable">Available Books</string>
    <string name="txtUpdateBtn">Update an existing book</string>
    <string name="txtHiUH">Hello, Reader</string>
    <string name="txtHihint">John! </string>
    <string name="txtAddABookUH">Add A book </string>
    <string name="txtAccountUH">Account </string>
    <string name="txtReadAbookUH">Get A book</string>
    <string name="txtSettings">Settings</string>
    <string name="txtMyBooksUH">Featured Books</string>
    <string name="txtLogOut">Log Out</string>
    <string name="txtSlogenS">Books Worth Spreading</string>
    <string name="txtUserProfileTitle">User Profile</string>
    <string name="txtBtnUpdateUP">UPDATE</string>
    <string name="txtBtnDeleteUP">DELETE ACCOUNT</string>
    <string name="hintChangeNameUP">Update Your Name</string>
    <string name="txtMyBookTitle">My Books</string>
    <string name="txtBtnUpdateBook">UPDATE BOOK</string>
    <string name="txtBtnDeleteBook">DELETE BOOK</string>
    <string name="track_a_book">Track a book</string>
    <string name="btnremoveabookpage">Remove a book</string>
    <string name="btnremoveauserpage">Remove a user</string>
    <string name="btnblockauserpage">Block a user</string>
    <string name="btntrackabookpage">Track a book</string>
    <string name="radiobtnpassword">Change your password</string>
    <string name="radiobtnemail">Change your email</string>
    <string name="radiobtnadminaccess">Revoke Admin Access</string>
    <string name="txtremoveuserreason">Reasons:</string>
    <string name="txtremovereasonn" />
    <string name="enterreasonremoveuser">Enter the Reason</string>
    <string name="txtremovebookreason">Reason:</string>
    <string name="txtremovebook">Enter the reason</string>
    <string name="btnremovebook">Remove</string>
    <string name="txtblockuserreason">Reasons:</string>
    <string name="txtenterreasonblockuser">Enter the reason</string>
    <string name="radiobtnoneday">Block for 1 day</string>
    <string name="radiobtnthreedays">Block for 3 days</string>
    <string name="radiobtnsevendays">Block for 7 days</string>
    <string name="btnblockuser">Block</string>
    <string name="btnblockuserpage">Block a user</string>
    <string name="trackabookisbn">Enter the ISBN</string>
    <string name="trackabookmessage" />
    <string name="adminbtnlogout">Logout</string>
    <string name="btngetabook">Get Book</string>
    <string name="enterisbngetbook">Please Enter ISBN</string>
    <string name="btnfindbook">Coming Soon!</string>
    <string-array name="txtGroupRent">
        <item>$0 per 24H</item>
        <item>$1 per 24H</item>
        <item>$2 per 24H</item>
    </string-array>
    <string-array name="txtGroupGenres">
        <item>Genre</item>
        <item>Fantasy</item>
        <item>Adventure</item>
        <item>Romance</item>
        <item>Dystopian</item>
        <item>Mystery</item>
        <item>Horror</item>
        <item>Thriller</item>
        <item>Paranormal</item>
        <item>Historical Fiction</item>
        <item>Science Fiction</item>
        <item>Childrens</item>
        <item>Memoir</item>
        <item>Cooking</item>
        <item>Art</item>
        <item>Self-Help</item>
        <item>Development</item>
        <item>Health</item>
        <item>History</item>
        <item>Travel</item>
        <item>Guide/How-to</item>
        <item>Families</item>
        <item>Humor</item>
    </string-array>
</resources>