<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminblockpage">

    <TextView
        android:id="@+id/txtblockuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="556dp"
        android:text="@string/txtblockuser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtblockusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="497dp"
        android:ems="10"
        android:hint="@string/enternameblock"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/usernameblock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtblockuser" />

    <TextView
        android:id="@+id/txtblockreasontitle"
        android:layout_width="53dp"
        android:layout_height="21dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="401dp"
        android:text="@string/txtReasonBlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtblockusername" />

    <EditText
        android:id="@+id/txtblockuserreason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="305dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtblockreasontitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioButton
        android:id="@+id/radiobtnblock1"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="195dp"
        android:text="@string/blockoneday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtblockuserreason" />

    <RadioButton
        android:id="@+id/radiobnblock2"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="156dp"
        android:text="@string/blockthreedays"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiobtnblock1"
        app:layout_constraintVertical_bias="1.0" />

    <RadioButton
        android:id="@+id/radiobtnblock3"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="102dp"
        android:text="@string/blocksevendays"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiobnblock2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="#ffdc01"
        android:text="@string/confirmbtn"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiobtnblock3" />

</androidx.constraintlayout.widget.ConstraintLayout>