<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminremoveuser">

    <TextView
        android:id="@+id/txtremoveuser"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="545dp"
        android:text="@string/removeuser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtenterremovename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="468dp"
        android:ems="10"
        android:hint="@string/removename"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/enterremovename"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtremoveuser"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtremoveuserreason"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="406dp"
        android:text="@string/reasonremoveuser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtenterremovename" />

    <EditText
        android:id="@+id/txtenterreasonremove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="324dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/enterreason"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtremoveuserreason"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnconfirmremove"
        android:layout_width="322dp"
        android:layout_height="58dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="103dp"
        android:backgroundTint="#ffdc01"
        android:text="@string/btnconfirmremove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtenterreasonremove" />
</androidx.constraintlayout.widget.ConstraintLayout>